[gd_scene load_steps=27 format=3 uid="uid://idhqj50sfpgt"]

[ext_resource type="Script" path="res://dialogic/style/DialogicLayout.gd" id="1_gf4oe"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Background/node_background_holder.gd" id="2_uy4j7"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Character/node_portrait_container.gd" id="3_jrdso"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Style/node_style.gd" id="4_byqk6"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Choice/node_choice_button.gd" id="5_l5da8"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Choice/node_button_sound.gd" id="6_6tyep"]
[ext_resource type="AudioStream" uid="uid://b6c1p14bc20p1" path="res://addons/dialogic/Example Assets/sound-effects/typing1.wav" id="7_5e0a5"]
[ext_resource type="AudioStream" uid="uid://c2viukvbub6v6" path="res://addons/dialogic/Example Assets/sound-effects/typing4.wav" id="8_coyxw"]
[ext_resource type="AudioStream" uid="uid://dwcre3fjf3cj8" path="res://addons/dialogic/Example Assets/sound-effects/typing5.wav" id="9_dhcdm"]
[ext_resource type="Script" path="res://addons/dialogic/Events/DefaultStyles/HideWithChild.gd" id="10_f4ckt"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Text/node_name_label.gd" id="11_iw8ug"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Text/node_dialog_text.gd" id="12_be5v2"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Text/node_type_sound.gd" id="13_dnu48"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Text/node_next_indicator.gd" id="14_xgmde"]
[ext_resource type="Script" path="res://addons/dialogic/Events/DefaultStyles/Default/autoadvance_indicator.gd" id="15_bvq6h"]
[ext_resource type="Script" path="res://addons/dialogic/Events/TextInput/node_text_input.gd" id="16_byusb"]
[ext_resource type="Script" path="res://dialogic/style/ExampleGlossaryPopup.gd" id="17_la2xs"]
[ext_resource type="PackedScene" path="res://addons/dialogic/Events/DefaultStyles/ExampleHistoryScene.tscn" id="18_3lf5n"]
[ext_resource type="FontFile" uid="uid://vrrmdx83skor" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Regular.ttf" id="19_s0jnk"]
[ext_resource type="FontFile" uid="uid://cc4xli25271fd" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Bold.ttf" id="20_apcf1"]
[ext_resource type="FontFile" uid="uid://b5c0p00x6g6u5" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Italic.ttf" id="21_f5ltx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpkyg"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxpcl"]
content_margin_left = 64.0
content_margin_top = 32.0
content_margin_right = 64.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3vpc"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a3cyk"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 2
border_width_top = 4
border_width_right = 4
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnmvp"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.576471, 0.54902, 0.956863)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.733333, 0.670588, 0.627451, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.823529, 0.803922, 0.756863, 1)
shadow_size = 5

[node name="DefaultDialogNode" type="CanvasLayer"]
script = ExtResource("1_gf4oe")
text_size = 45
box_modulate = Color(0.00784314, 0.00784314, 0.00784314, 0.752941)
name_label_font_size = 50
name_label_box_modulate = Color(0.00784314, 0.00784314, 0.00784314, 0.752941)

[node name="DialogicNode_BackgroundHolder" type="CanvasLayer" parent="."]
layer = -1
script = ExtResource("2_uy4j7")

[node name="Portraits" type="CanvasLayer" parent="."]
layer = 0

[node name="Control" type="Control" parent="Portraits"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DialogicNode_PortraitContainer1" type="Control" parent="Portraits/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -257.0
offset_right = -1163.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_jrdso")
size_mode = 0

[node name="DialogicNode_PortraitContainer2" type="Control" parent="Portraits/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -909.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_jrdso")
position_index = 1
size_mode = 0

[node name="DialogicNode_PortraitContainer3" type="Control" parent="Portraits/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 428.0
offset_right = -431.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_jrdso")
position_index = 2
size_mode = 0

[node name="DialogicNode_PortraitContainer4" type="Control" parent="Portraits/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 910.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_jrdso")
position_index = 3
size_mode = 0

[node name="DialogicNode_PortraitContainer5" type="Control" parent="Portraits/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1150.0
offset_right = 261.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_jrdso")
position_index = 4
size_mode = 0

[node name="DefaultStyle" type="Control" parent="." groups=["dialogic_mouse_filter"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_byqk6")

[node name="Choices" type="VBoxContainer" parent="DefaultStyle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -157.0
offset_right = 122.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(115, 160)
mouse_filter = 2
alignment = 1
metadata/_edit_layout_mode = 1

[node name="DialogicNode_ChoiceButton1" type="Button" parent="DefaultStyle/Choices" groups=["dialogic_mouse_filter"]]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Some text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton2" type="Button" parent="DefaultStyle/Choices" groups=["dialogic_mouse_filter"]]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Some text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton3" type="Button" parent="DefaultStyle/Choices" groups=["dialogic_mouse_filter"]]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Some text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton4" type="Button" parent="DefaultStyle/Choices" groups=["dialogic_mouse_filter"]]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Some text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton5" type="Button" parent="DefaultStyle/Choices" groups=["dialogic_mouse_filter"]]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Some text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton6" type="Button" parent="DefaultStyle/Choices" groups=["dialogic_mouse_filter"]]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Some text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ButtonSound" type="AudioStreamPlayer" parent="DefaultStyle/Choices"]
script = ExtResource("6_6tyep")
sound_pressed = ExtResource("7_5e0a5")
sound_hover = ExtResource("8_coyxw")
sound_focus = ExtResource("9_dhcdm")

[node name="NameLabelPanel" type="PanelContainer" parent="DefaultStyle"]
unique_name_in_owner = true
self_modulate = Color(0.00784314, 0.00784314, 0.00784314, 0.752941)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 54.0
offset_top = 158.0
offset_right = 215.0
offset_bottom = 230.0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wpkyg")
script = ExtResource("10_f4ckt")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="DefaultStyle/NameLabelPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
script = ExtResource("10_f4ckt")

[node name="DialogicNode_NameLabel" type="Label" parent="DefaultStyle/NameLabelPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Name"
horizontal_alignment = 1
script = ExtResource("11_iw8ug")

[node name="DialogTextPanel" type="PanelContainer" parent="DefaultStyle"]
unique_name_in_owner = true
self_modulate = Color(0.00784314, 0.00784314, 0.00784314, 0.752941)
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bxpcl")
metadata/_edit_layout_mode = 1

[node name="DNextIndicator" type="Control" parent="DefaultStyle/DialogTextPanel"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
script = ExtResource("14_xgmde")
show_on_questions = true
metadata/_edit_layout_mode = 1

[node name="AutoAdvanceProgressbar" type="ProgressBar" parent="DefaultStyle/DialogTextPanel"]
modulate = Color(1, 1, 1, 0.188235)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
max_value = 1.0
step = 0.001
value = 0.5
show_percentage = false
script = ExtResource("15_bvq6h")

[node name="DialogicNode_DialogText" type="RichTextLabel" parent="DefaultStyle/DialogTextPanel"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 45
theme_override_font_sizes/bold_font_size = 45
theme_override_font_sizes/italics_font_size = 45
theme_override_font_sizes/bold_italics_font_size = 45
bbcode_enabled = true
text = "Some default text"
visible_characters_behavior = 1
script = ExtResource("12_be5v2")

[node name="DialogicNode_TypeSounds" type="AudioStreamPlayer" parent="DefaultStyle/DialogTextPanel/DialogicNode_DialogText"]
script = ExtResource("13_dnu48")
play_every_character = 0

[node name="DialogicNode_TextInput" type="Control" parent="DefaultStyle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.0
offset_top = -66.0
offset_right = 104.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
mouse_filter = 2
script = ExtResource("16_byusb")
input_line_edit = NodePath("TextInputPanel/VBoxContainer/InputField")
text_label = NodePath("TextInputPanel/VBoxContainer/TextLabel")
confirmation_button = NodePath("TextInputPanel/VBoxContainer/ConfirmationButton")
metadata/_edit_layout_mode = 1

[node name="TextInputPanel" type="PanelContainer" parent="DefaultStyle/DialogicNode_TextInput"]
unique_name_in_owner = true
self_modulate = Color(0.00784314, 0.00784314, 0.00784314, 0.752941)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q3vpc")

[node name="VBoxContainer" type="VBoxContainer" parent="DefaultStyle/DialogicNode_TextInput/TextInputPanel"]
layout_mode = 2
mouse_filter = 2

[node name="TextLabel" type="Label" parent="DefaultStyle/DialogicNode_TextInput/TextInputPanel/VBoxContainer"]
layout_mode = 2
text = "What is your name?"
autowrap_mode = 3

[node name="InputField" type="LineEdit" parent="DefaultStyle/DialogicNode_TextInput/TextInputPanel/VBoxContainer" groups=["dialogic_mouse_filter"]]
layout_mode = 2

[node name="ConfirmationButton" type="Button" parent="DefaultStyle/DialogicNode_TextInput/TextInputPanel/VBoxContainer" groups=["dialogic_mouse_filter"]]
layout_mode = 2
size_flags_horizontal = 8
text = "Confirm"

[node name="Glossary" type="Control" parent="DefaultStyle"]
layout_mode = 1
anchors_preset = 0
mouse_filter = 2
script = ExtResource("17_la2xs")

[node name="Panel" type="PanelContainer" parent="DefaultStyle/Glossary"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -115.0
offset_right = 104.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a3cyk")
metadata/_edit_use_custom_anchors = true
metadata/_edit_layout_mode = 1

[node name="VBox" type="VBoxContainer" parent="DefaultStyle/Glossary/Panel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="DefaultStyle/Glossary/Panel/VBox"]
layout_mode = 2
text = "MyGlossaryEntry"

[node name="HSeparator" type="HSeparator" parent="DefaultStyle/Glossary/Panel/VBox"]
layout_mode = 2
mouse_filter = 2

[node name="Text" type="RichTextLabel" parent="DefaultStyle/Glossary/Panel/VBox"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "Some text"
fit_content = true

[node name="Extra" type="RichTextLabel" parent="DefaultStyle/Glossary/Panel/VBox"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 0.584314)
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[right]Wow, some text!"
fit_content = true

[node name="Control" type="Control" parent="DefaultStyle/Glossary/Panel"]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="DefaultStyle/Glossary/Panel/Control"]
layout_mode = 0
offset_left = -0.999999
offset_top = -14.0
offset_right = 19.0
offset_bottom = 6.0
rotation = 0.75799
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a3cyk")

[node name="SpecialStyle" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_byqk6")
style_name = "Special"

[node name="Choices" type="VBoxContainer" parent="SpecialStyle"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -276.0
offset_right = -27.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
alignment = 2
metadata/_edit_layout_mode = 1

[node name="DialogicNode_ChoiceButton1" type="Button" parent="SpecialStyle/Choices"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
text = "Text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton2" type="Button" parent="SpecialStyle/Choices"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
text = "Text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton3" type="Button" parent="SpecialStyle/Choices"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
text = "Text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton4" type="Button" parent="SpecialStyle/Choices"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
text = "Text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton5" type="Button" parent="SpecialStyle/Choices"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
text = "Text"
script = ExtResource("5_l5da8")

[node name="DialogicNode_ChoiceButton6" type="Button" parent="SpecialStyle/Choices"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
text = "Text"
script = ExtResource("5_l5da8")

[node name="PanelContainer" type="PanelContainer" parent="SpecialStyle"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 26.0
offset_right = 202.0
offset_bottom = 95.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nnmvp")
metadata/_edit_layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="SpecialStyle/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SpecialStyle/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="DialogicNode_NameLabel" type="Label" parent="SpecialStyle/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1
script = ExtResource("11_iw8ug")
use_character_color = false

[node name="DialogicNode_DialogText" type="RichTextLabel" parent="SpecialStyle/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
text = "Some default text"
script = ExtResource("12_be5v2")

[node name="ExampleHistoryScene" parent="." instance=ExtResource("18_3lf5n")]
history_font_normal = ExtResource("19_s0jnk")
history_font_bold = ExtResource("20_apcf1")
history_font_italics = ExtResource("21_f5ltx")
metadata/_edit_lock_ = true

[connection signal="meta_hover_ended" from="DefaultStyle/DialogTextPanel/DialogicNode_DialogText" to="DefaultStyle/Glossary" method="_on_dialogic_display_dialog_text_meta_hover_ended"]
[connection signal="meta_hover_started" from="DefaultStyle/DialogTextPanel/DialogicNode_DialogText" to="DefaultStyle/Glossary" method="_on_dialogic_display_dialog_text_meta_hover_started"]
